EPMRPP-110761 || add logging for file retrieval in S3DataStore and update jclouds version